Sat Apr 06 00:21:34 GMT 2013  Olly Betts <olly@survex.com>

	* m4-macros/xapian-1.3.m4: XO_LIB_XAPIAN now handles the user
	  specifying XAPIAN_CONFIG without a path - e.g.: "./configure
	  XAPIAN_CONFIG=xapian-config-1.3"

Thu Apr 04 12:02:36 GMT 2013  Olly Betts <olly@survex.com>

	* common/Makefile.mk: Remove random comment.

Thu Apr 04 10:06:53 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,tests/Makefile.am: Remove support for
	  'configure --enable-quiet', 'make QUIET=' and 'make QUIET=y' -
	  automake now supports 'configure --enable-silent-rules', 'make V=1'
	  and 'make V=0' which are broadly equivalent and more standard.

Thu Apr 04 09:58:35 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Update to note that automake 1.12.2 is now a hard
	  requirement.

Tue Apr 02 10:22:44 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Comment typo fixes.

Tue Apr 02 09:47:14 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/lemon.c,queryparser/queryparser.lt: Sync with latest
	  upstream version of lemon.  The only notable change is a bug fix for
	  platforms where sizeof(long) < sizeof(void*) (LLP64 model).

Tue Apr 02 05:51:12 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Tell vim to syntax highlight as rst.

Tue Apr 02 05:50:26 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Update for recent changes to bootstrap.  In particular, we
	  now bootstrap snapshots with automake 1.13.1.

Fri Mar 29 05:18:11 GMT 2013  Olly Betts <olly@survex.com>

	* net/tcpclient.cc: Fix __WIN32__ conditional, accidentally broken in
	  last change to this file.

Thu Mar 28 04:19:26 GMT 2013  jiangwen jiang <jiangwen127@gmail.com>

	* api/expanddecider.cc,include/xapian/expanddecider.h,
	  tests/api_anydb.cc,tests/api_nodb.cc: Add ExpandDeciderFilterPrefix
	  class to only return terms with a particular prefix.  (fixes #467)

Thu Mar 21 23:55:26 GMT 2013  Olly Betts <olly@survex.com>
